// protos/v1/realtor/realtor.proto
//protoc -I . --go_out . --go_opt paths=source_relative --go-grpc_out . --go-grpc_opt paths=source_relative protos/v1/realtor/realtor.proto


syntax = "proto3";

package v1.realtor;

import "google/protobuf/empty.proto";
import "protos/v1/common/common.proto";

option go_package = "github.com/sy-yoon/krealtors/protos/v1/realtor";

message ReItem {
    string id = 1;
    string title = 2;
    string type = 3;
    string tx_type = 4;
    string available_date = 5;
    string user_id = 6;
    string city_id = 7;
    string address = 8;
    string thumbnail = 9;
    int32 price = 10;
    int32 bedroom = 11;
    int32 bathroom = 12;
    int32 parking = 13;
    bool garage = 14;
    bool furnished = 15;
    string facing = 16;
    string content = 17;
    int64 created_date = 18;
    int64 updated_date = 19;
    message Location {
        int32 lat = 1;
        int32 lng = 2;
    }
    Location location = 20;

    message Options {
        bool aircon = 1;
        bool refrigerator = 2;
        bool washingmachine = 3;
        bool dishwasher = 4;
        bool microwave = 5;
        bool tv = 6;
        bool doorlock = 7;
    }
    Options options = 21;

    repeated v1.common.Images images = 22;
}

service RealtorService {
    rpc GetReItem(GetReItemRequest) returns (ReItem);
    rpc ListReItems(ListReItemsRequest) returns (ListReItemsResponse);
    rpc CreateReItem(ReItem) returns (ReItem);
    rpc UpdateReItem(ReItem) returns (ReItem);
    rpc DeleteReItem(DeleteReItemRequest) returns (google.protobuf.Empty);
}

message GetReItemRequest {
    string id = 1;
}

message ListReItemsRequest {
    v1.common.ListParameters list_parameters = 1;
}

message ListReItemsResponse {
  repeated ReItem re_item = 1;
}

message DeleteReItemRequest {
    string id = 1;
}